welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:8: error: too many arguments for method baisseBrosse: ()Unit
		baisseBrosse(c)
                            ^MethodsPicture:9: error: too many arguments for method leveBrosse: ()Unit
		leveBrosse(c)
                          ^MethodsPicture:32: error: not found: value YELLOW
	faireV(YELLOW)
               ^MethodsPicture:33: error: not found: value RED
	faireV(RED)
               ^MethodsPicture:34: error: not found: value BLUE
	faireV(BLUE)
               ^MethodsPicture:35: error: not found: value GREEN
	faireV(GREEN)
               ^